# drive-pictures-to-s3

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  example.env  pyproject.toml  requirements.txt
drive_pictures_to_s3/: config.py  main.py
drive_pictures_to_s3/clients/: __init__.py  drive.py  drive_client.py  s3.py  s3_client.py
